<resources>
    <string name="app_name">Dicoding-Event</string>
    <string name="searchBarHint">Cari Event Dicoding!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcomingTitle">Upcoming</string>
    <string name="favoriteTitle">Favorite</string>
    <string name="finishedTitle">Finished</string>
    <string name="homeTitle">Home</string>
    <string name="search_bar_hint">Cari Event Dicoding!</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="finished_event">Finished Event</string>
    <string name="description">DevCoach 173: iOS | Mendalami SwiftUI, UI Framework Masa Depan!</string>
    <string name="search_bar">Cari Event</string>
    <string name="deskripsi_acara">Deskripsi Acara</string>
    <string name="penyelengara">Penyelengara</string>
    <string name="waktu">Waktu</string>
    <string name="register">Register</string>
    <string name="sisa_kuota">Sisa Kuota</string>
    <string name="dicoding_favorite_event">Dicoding Favorite Event</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
</resources>